Correction dun bug sur la fontisze des collapse dans la page logement en desktop; tablette et phone

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -845,3 +845,22 @@ footer {
         }
     }
 }
+
+// ******** Patch ******** //
+//probleme de fontsize sur le collapse des pages logements
+.setFontsizeForPageLogement {
+    font-size: 18px;
+    padding-left: 15px;
+    padding-top: 15px;
+    @include reponsive(tablette) {
+        font-size: 15px;
+        padding-left: 10px;
+        padding-top: 9px;
+    }
+
+    @include reponsive(phone) {
+        font-size: 13px;
+        padding-left: 10px;
+        padding-top: 7px;
+    }
+}
